# md-slides

./: evolve_evaluator.py  next.config.ts  package-lock.json  package.json  population.json  pyproject.toml
.github/workflows/: deploy.yml
docs/: evolution-log.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/present/: page.tsx
src/components/: Editor.tsx  Slide.tsx  SlidePreview.tsx  Toolbar.tsx
src/hooks/: useSlides.ts
src/lib/: parser.ts  themes.ts
src/types/: index.ts
